add gmail service

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -13,7 +13,7 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light text-uppercase font-weight-bold">
             <div class="container">
-                <a class="navbar-brand" href="index.html"><img width="250" src="{% static 'web/imgs/logo.png' %}" alt="#" /></a>
+                <a class="navbar-brand" href="index.html"><img width="250" src="{% static 'web/imgs/logo.png' %}" alt="/" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#show-menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -53,11 +53,11 @@
                 <div class="row" style="background-image: url({% static 'web/imgs/header-ai.jpg' %});">
                     <div class="col-xl-5 col-lg-12">
                         <p><span>Best</span> cleaning company</p>
-                        <button><a href="#" class="text-uppercase">read more</a></button>
+                        <button><a href="/" class="text-uppercase">read more</a></button>
                     </div>
                     <div class="col-xl-7 col-lg-12">
                         <div class="white-overlay d-flex align-items-center">
-                            <button><a href="#" class="text-uppercase">contact now</a></button>
+                            <button><a href="#contact" class="text-uppercase">contact now</a></button>
                         </div>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="row">
                     <div class="col-lg-7 col-12 d-flex align-items-center">
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                        <button class="text-uppercase font-weight-bold"><a href="#">read more</a></button>
+                        <button class="text-uppercase font-weight-bold"><a href="/">read more</a></button>
                     </div>
                     <div class="col-lg-5 col-12">
                         <div class="blue-shadow"></div>
@@ -89,46 +89,46 @@
                     <div class="col-lg-4 col-md-6 col-xs-12 active">
                         <div class="item">
                             <i class="fas fa-stopwatch fa-3x"></i>
-                            <h4><a href="#">Fast service</a></h4>
+                            <h4><a href="/">Fast service</a></h4>
                             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="item">
                             <i class="fas fa-money-check-alt fa-3x"></i>
-                            <h4><a href="#">Secure payments</a></h4>
+                            <h4><a href="/">Secure payments</a></h4>
                             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="item">
                             <i class="fas fa-users fa-3x"></i>
-                            <h4><a href="#">Expert team</a></h4>
+                            <h4><a href="/">Expert team</a></h4>
                             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="item">
                             <i class="fas fa-suitcase fa-3x"></i>
-                            <h4><a href="#">Affordable services</a></h4>
+                            <h4><a href="/">Affordable services</a></h4>
                             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="item">
                             <i class="fas fa-money-bill-wave fa-3x"></i>
-                            <h4><a href="#">90 Days warranty</a></h4>
+                            <h4><a href="/">90 Days warranty</a></h4>
                             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-xs-12">
                         <div class="item">
                             <i class="fas fa-award fa-3x"></i>
-                            <h4><a href="#">Award winning</a></h4>
+                            <h4><a href="/">Award winning</a></h4>
                             <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
                         </div>
                     </div>
-                    <button><a href="#" class="text-uppercase font-weight-bold">read more</a></button>
+                    <button><a href="/" class="text-uppercase font-weight-bold">read more</a></button>
                     <div class="rectangle"></div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                                     <li>Fully trained employees</li>
                                     <li>Sustainable products</li>
                                 </ul>
-                                <button><a href="#">Get started</a></button>
+                                <button><a href="/">Get started</a></button>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                     <li>Fully trained employees</li>
                                     <li>Sustainable products</li>
                                 </ul>
-                                <button><a href="#">Get started</a></button>
+                                <button><a href="/">Get started</a></button>
                             </div>
                         </div>
                     </div>
@@ -200,7 +200,7 @@
                                     <li>Fully trained employees</li>
                                     <li>Sustainable products</li>
                                 </ul>
-                                <button><a href="#">Get started</a></button>
+                                <button><a href="/">Get started</a></button>
                             </div>
                         </div>
                     </div>
@@ -211,12 +211,13 @@
         <div class="contact" id="contact" style="background-image: url({% static 'web/imgs/contact.jpg' %});">
             <div class="container">
                 <div class="contact-form">
-                    <form>
-                        <input type="text" placeholder="Your name">
-                        <input type="text" placeholder="Phone number">
-                        <input type="text" placeholder="Select service">
-                        <input type="email" placeholder="Email">
-                        <textarea placeholder="Message"></textarea>
+                    <form action="{% url 'send_email' %}" method="post">
+                        {% csrf_token %}
+                        <input type="text" name="name" placeholder="Your name">
+                        <input type="text" name="phone" placeholder="Phone number">
+                        <input type="text" name="service" placeholder="Select service">
+                        <input type="email" name="email" placeholder="Email">
+                        <textarea name="message" placeholder="Message"></textarea>
                         <input type="submit" value="Send">
                     </form>
                 </div>
@@ -237,10 +238,10 @@
                             <li><a href="#contact">contact us</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                            <li><a href="/"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="/"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="/"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="/"><i class="fab fa-google-plus-g"></i></a></li>
                         </ul>
                     </div>
                     <div class="text-center">
