--- a/static/web/css/style copy.css
+++ b/static/web/css/style copy.css
@@ -444,23 +444,23 @@ header .row > div:last-of-type button a {
 }
 
 .contact .container {
-    padding-top: 10; 
-    padding-bottom: 10; 
+    padding-top: 50px; 
+    padding-bottom: 50px; 
 }
 
 .contact .contact-form {
-    background-color: rgba(48, 127, 222, 0.65);
+    background-color: rgba(44, 115, 232, .65);
     padding: 30px;
-    width: 100%;
+    width: 40%;
 }
 
 .contact .contact-form input {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 5px 10px;
 }
 
 .contact .contact-form input[type='text'] {
-    width: 100%;
+    width: 48%;
 }
 
 .contact .contact-form input:nth-of-type(3) {
@@ -784,7 +784,7 @@ footer .copyright p {
     /* contact */
     
     .contact .contact-form {
-        width: 100%;
+        width: 80%;
     }
     
     /* footer */
