--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -234,7 +234,7 @@
                             
                             <!-- Display Available Times -->
                             <hr>
-                            <div id="timesContainer" class="mt-4"></div>
+                            <div id="timesContainer" class="btn-group" role="group"></div>
                             <hr>
                             <button id="reserve" class="btn btn-primary">Send</button>
                         </div>                        
