--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,7 +11,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light text-uppercase font-weight-bold">
+        <nav class="navbar navbar-expand-lg navbar-light text-uppercase font-weight-bold fixed-top">
             <div class="container">
                 <a class="navbar-brand" href="index.html"><img width="250" src="{% static 'web/imgs/logo.png' %}" alt="/" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#show-menu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
