--- a/web/static/web/css/style.css
+++ b/web/static/web/css/style.css
@@ -264,7 +264,7 @@ header .row > div:last-of-type button a {
 }
 
 .services .active i {
-    color: #e84708;
+    color: #052242;
 }
 
 .services button {
@@ -359,7 +359,7 @@ header .row > div:last-of-type button a {
 
 .prices .item > div:first-of-type{
     padding: 20px;
-    background-color: #e84708;
+    background-color: #052242;
     color: #FFF;
     text-align: center;
     border-top-right-radius: 50px;
@@ -373,7 +373,7 @@ header .row > div:last-of-type button a {
 }
 
 .prices .item > div:last-of-type p span:first-of-type {
-    color: #e84708;
+    color: #052242;
     font-weight: bold;
     font-size: 25px;
 }
@@ -426,7 +426,7 @@ header .row > div:last-of-type button a {
 }
 
 .prices .row .item.active button {
-    background-color: #e84708;
+    background-color: #052242;
 }
 
 .prices .row .item.active > div:first-of-type{
@@ -481,7 +481,7 @@ header .row > div:last-of-type button a {
 .contact .contact-form input[type="submit"] {
     margin-bottom: 0;
     margin-top: 10px;
-    background-color: #e84708;
+    background-color: #052242;
     border: none;
     padding: 10px 30px;
     color: #FFF;
@@ -540,7 +540,7 @@ footer .d-flex + div input[type="submit"] {
     height: 29.5px;
     width: 120px;
     border: none;
-    background-color: #ea4808;
+    background-color: #052242;
     color: #FFF;
     font-size: 16px;
 }
@@ -859,4 +859,31 @@ footer .copyright p {
     footer .d-flex + div form input[type="submit"] {
         width: 40%
     }
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+.background {
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; /* Ensures the background stays fixed while scrolling */
+    opacity: 0.5; /* Sets the transparency */
+    position: fixed; /* Fixes the background to the viewport */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Keeps it behind the content */
+}
+
+
+.content {
+    position: relative;
+    z-index: 1;
+    padding: 20px;
+    color: black;
 }
