--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,8 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light text-uppercase font-weight-bold fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img width="75" src="{% static 'web/imgs/logo.jpg' %}"
-                    alt="/" /></a>
+            <a class="navbar-brand" href="index.html"><img width="75" src="{% static 'web/imgs/logo.jpg' %}"alt="/" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#show-menu"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,19 +24,19 @@
             <div class="collapse navbar-collapse" id="show-menu">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#home">Indexseite <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#about">Über uns</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#services">Services</a>
+                        <a class="nav-link" href="#services">Leistungen</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#team">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#company">Company</a>
+                        <a class="nav-link" href="#company">Unternehmen</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +46,7 @@
     <header class="text-uppercase" id="home">
         <div class="row" style="background-image: url({% static 'web/imgs/header-ai.jpg' %});">
             <div class="col-xl-5 col-lg-12">
-                <p><span>Best</span> cleaning company</p>
+                <p><span>Glanz Fix</span> – Klare Sicht, Perfekter Glanz</p>
                 
             </div>
             <div class="col-xl-7 col-lg-12">
@@ -60,18 +59,13 @@
     <div class="background" style="background-image: url({% static 'web/imgs/logo.jpg' %});"></div><!--  -->
     <div class="about-us">
         <div class="container">
-            <strong class="text-uppercase" id="about">about us</strong>
-            <h2 class="text-uppercase">our <span>company</span></h2>
-            <p>Full cleaning and housekeeping services for companies and households.</p>
+            <strong class="text-uppercase" id="about">Über uns</strong>
+            <h2 class="text-uppercase">Über uns<span></span></h2>
+            
             <div class="row">
                 <div class="col-lg-7 col-12 d-flex align-items-center">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                        been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is
-                        simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                        industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and
-                        typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                   
+                    <p>Glanz Fix ist Ihr zuverlässiger Partner für professionelle Glas- und Fensterreinigung. Wir sorgen mit höchster Sorgfalt und modernen Reinigungstechniken für streifenfreien Glanz – ob in privaten Haushalten oder Geschäftsräumen. Unser Anspruch ist es, Qualität, Zuverlässigkeit und Kundenzufriedenheit in den Mittelpunkt zu stellen. 
+                        Mit unserer Erfahrung und einem Auge fürs Detail garantieren wir eine gründliche und schonende Reinigung aller Glasflächen. Dabei setzen wir auf umweltfreundliche Reinigungsmittel und effiziente Methoden, um beste Ergebnisse zu erzielen. Ihre Zufriedenheit ist unser Erfolg – lassen Sie Ihre Glasflächen mit Glanz Fix in neuem Licht erstrahlen.</p>
                 </div>
                 <div class="col-lg-5 col-12">
                     <div class="blue-shadow"></div>
@@ -83,35 +77,31 @@
 
     <div class="services text-center">
         <div class="container">
-            <h2 class="text-uppercase" id="services">Our <span>services</span></h2>
+            <h2 class="text-uppercase" id="services">Unsere Leistungen<span></span></h2>
             <p>Typesetting industry lorem Ipsum is simply dummy text of the </p>
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="item">
                         <i class="fas fa-stopwatch fa-3x"></i>
-                        <h4><a href="/">Fast service</a></h4>
-                        <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                        <h4><a href="/">Schneller Service</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="item">
                         <i class="fas fa-money-check-alt fa-3x"></i>
-                        <h4><a href="/">Secure payments</a></h4>
-                        <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                        <h4><a href="/">Sichere Zahlungen</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="item">
                         <i class="fas fa-users fa-3x"></i>
-                        <h4><a href="/">Expert team</a></h4>
-                        <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                        <h4><a href="/">Expertenteam</a></h4>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="item">
                         <i class="fas fa-suitcase fa-3x"></i>
-                        <h4><a href="/">Affordable services</a></h4>
-                        <p>Exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+                        <h4><a href="/">Erschwingliche Dienstleistungen</a></h4>
                     </div>
                 </div>
                 
@@ -123,9 +113,14 @@
 
     <div class="what-we-do" id="team">
         <div class="container">
-            <h2 class="text-uppercase">What <span>we do</span></h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+             
+            <h2 class="text-uppercase">Warum <span>Sie sich für uns entscheiden sollten:</span></h2>
+            <p>Verpflichtung zur Servicequalität: Wir setzen auf umweltfreundliche Produkte und gewährleisten die Einhaltung europäischer Standards.
             </p>
+            <p>Wettbewerbsfähige Preise: Profitieren Sie von hervorragendem Service zu besten Preisen, individuell auf Ihre Bedürfnisse abgestimmt.</p>
+            <p>Maßgeschneiderte Dienstleistungen: Wir bieten flexible Reinigungspläne, die perfekt auf Ihre Anforderungen zugeschnitten sind.</p>
+            <p>
+                Langjährige Erfahrung: Mit unserer langjährigen Expertise in der Branche garantieren wir Ihnen zuverlässige, professionelle Dienstleistungen, die selbst höchsten Ansprüchen gerecht werden</p>
             <div class="img" style="background-image: url({% static 'web/imgs/about-us-ai-2.jpg' %});"></div>
             <div class="start-button text-center">
                 <i class="fas fa-play"></i>
@@ -136,60 +131,90 @@
     <div class="prices">
         <div class="container">
             <div id="company"></div>
-            <h2 class="text-center text-uppercase">Our <span>pricing table</span></h2>
+            <h2 class="text-center text-uppercase">Unsere Preistabelle<span></span></h2>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="item f-item active">
                         <div>
-                            <h5>Starter</h5>
-                            <p>The best to start</p>
+                            <h5>Schaufenster</h5>
                         </div>
                         <div>
-                            <p><span>$</span> <span>180</span> /per month</p>
                             <ul>
-                                <li>Fast service</li>
-                                <li>Safe payments</li>
-                                <li>Fully trained employees</li>
-                                <li>Sustainable products</li>
+                                <li>Reinigung der Schaufenster von Geschäften (Fläche von 1-7 m <sup>2</sup>)</li>
+                                <li> Einmal im Monat: 55€
+                                </li>
+                                <li>Zweimal im Monat: 45€
+                                </li>
+                                <li>Dreimal oder mehr: 35€</li>
+                                <li>Zusätzliche Dienstleistung: Erste Bodenreinigung kostenlos.
+                                </li>
                             </ul>
-                            <button><a href="/">Get started</a></button>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-12 col-12">
-                    <div class="item active">
-                        <div>
-                            <h5>Professional</h5>
-                            <p>The best to start</p>
-                        </div>
-                        <div>
-                            <p><span>$</span> <span>210</span> /per month</p>
-                            <ul>
-                                <li>Fast service</li>
-                                <li>Safe payments</li>
-                                <li>Fully trained employees</li>
-                                <li>Sustainable products</li>
-                            </ul>
-                            <button><a href="/">Get started</a></button>
-                        </div>
-                    </div>
+                    
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="item l-item active">
+                    <div class="item active">
                         <div>
-                            <h5>Business</h5>
-                            <p>The best to start</p>
+                            <h5>Zusatzdienstleistung für Restaurants</h5>
                         </div>
                         <div>
-                            <p><span>$</span> <span>410</span> /per month</p>
                             <ul>
-                                <li>Fast service</li>
-                                <li>Safe payments</li>
-                                <li>Fully trained employees</li>
-                                <li>Sustainable products</li>
+                                <li>Professionelle Reinigung für Restaurants (bis 65 m <sup>2</sup>) – Boden, Wände & Küchengeräte – Hygienestandards garantiert</li>
+                                <li> Reinigung des Bodens, der Wände und der Küchengeräte (Backofen, Gasherd, etc.): 375€
+                                </li>
+                                <li>Wir garantieren die Einhaltung europäischer Hygienestandards und die Verwendung umweltfreundlicher Reinigungsmittel.
+    
+                                </li>
+                                <li>Die Dienstleistung gilt für Restaurants mit einer Fläche von bis zu 65 m<sup>2</sup>.
+                                </li>
+                                </li>
                             </ul>
-                            <button><a href="/">Get started</a></button>
                         </div>
+                    </div>
+                </div>
+                
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="item active">
+                        <div>
+                            <h5>Salons</h5>
+                            <p>Reinigung von Mode-, Parfüm- und Friseursalons:
+                            </p>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>Preisspanne: 100€ - 275€</li>
+                                <li>Der Preis hängt von der Größe des Geschäfts ab.
+                                </li>
+                                <li>
+                                    <p>Die Leistungen beinhalten:</p>
+                                    Reinigung des Bodens (Porzellan oder Holz). <br>
+                                    Reinigung der Spiegel und Ausstellungsflächen. <br>
+                                    Reinigung der Außenfassade des Geschäfts, um Kunden anzulocken.
+                                </li>
+                            </ul>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <br>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-12">
+                    <div class="item active">
+                        <div>
+                            <h5>Angebote und Rabatte</h5>
+                            
+                        </div>
+                        <div>
+                            <ul>
+                                <li>Wir bieten attraktive Rabatte für Verträge, die länger als 6 Monate laufen.
+                                </li>
+                                <li>Zögern Sie nicht, uns für weitere Informationen oder maßgeschneiderte Angebote zu kontaktieren. Wir freuen uns auf neue Herausforderungen im Bereich der Dienstleistung für Sauberkeit und stehen Ihnen gerne zur Verfügung
+                                </li>
+                            </ul>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -209,22 +234,22 @@
                     <!-- time -->
                     <div class="container py-5">
 
-                        <h1 class="mb-4">Date and Time Reservation</h1>
+                        <h1 class="mb-4">Datums- und Uhrzeitreservierung</h1>
 
                         <!-- Calendar Element -->
                         <div class="mb-3">
-                            <label for="date" class="form-label">Choose a Date:</label>
+                            <label for="date" class="form-label">Wählen Sie ein Datum:</label>
                             <input type="date" id="date" name="date" class="form-control">
                         </div>
 
                         <!-- Button to Fetch Times -->
-                        <button id="fetchTimes" class="btn btn-primary">Get Available Times</button>
+                        <button id="fetchTimes" class="btn btn-primary">Verfügbare Zeiten abrufen</button>
 
                         <!-- Display Available Times -->
                         <hr>
                         <div id="timesContainer" class="btn-group" role="group"></div>
                         <hr>
-                        <button id="reserve" class="btn btn-primary">Send</button>
+                        <button id="reserve" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
             </div>
@@ -235,13 +260,13 @@
         <div class="main-part">
             <div class="container">
                 <div class="d-flex justify-content-between text-uppercase">
-                    <div>Company logo</div>
+                    <div><img width="75" src="{% static 'web/imgs/logo.jpg' %}"alt="/" /></div>
                     <ul class="main-list">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">about</a></li>
-                        <li><a href="#services">services</a></li>
+                        <li><a href="#home">Indexseite</a></li>
+                        <li><a href="#about">Über uns</a></li>
+                        <li><a href="#services">Leistungen</a></li>
                         <li><a href="#team">team</a></li>
-                        <li><a href="#company">company</a></li>
+                        <li><a href="#company">Unternehmen</a></li>
                     </ul>
                     <ul>
                         <li><a href="/"><i class="fab fa-facebook-f"></i></a></li>
@@ -250,7 +275,7 @@
                         <li><a href="/"><i class="fab fa-google-plus-g"></i></a></li>
                     </ul>
                 </div>
-                <div class="text-center">
+                <!-- <div class="text-center">
                     <form>
                         <label>
                             News letter
@@ -258,7 +283,7 @@
                             <input type="submit" value="Subscribe">
                         </label>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="copyright text-center">
